[package]
name = "album-creator"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "tool to batch process images"
maintenance = { status = "as-is" }
readme = "README.md"
repository = "https://github.com/hannes-hochreiner/album-creator"
publish = false
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.85"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.64"
uuid = { version = "1.1.2", features = ["v4"] }
clap = { version = "3.2.20", features = ["derive"] }
